--- a/index.html
+++ b/index.html
@@ -266,18 +266,19 @@
 
             <!-- Chart 1 -->
             <div class="glass-panel p-6 rounded-2xl">
-                <div class="flex items-center justify-between mb-6">
+                <div class="flex items-center justify-between mb-4">
                     <div>
                         <h3 class="text-xl font-bold text-white">Top 10 Dezenas</h3>
                         <p class="text-sm text-emerald-200/50">Frequência histórica (1996-2025)</p>
                     </div>
-                    <div class="bg-emerald-500/20 p-2 rounded-lg">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-emerald-400" fill="none"
-                            viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
-                        </svg>
-                    </div>
+                </div>
+                <div class="mb-4 bg-emerald-900/40 p-3 rounded-lg border border-emerald-500/20">
+                    <p class="text-sm text-emerald-100 leading-relaxed">
+                        <strong class="text-emerald-400">O que isso significa?</strong> <br>
+                        Estes são os números que "mais gostam de sair". Embora cada sorteio seja aleatório, a história
+                        mostra que o número <strong>10</strong> e <strong>53</strong> aparecem muito mais que os outros.
+                        Apostar neles é seguir a tendência histórica.
+                    </p>
                 </div>
                 <div class="chart-container">
                     <canvas id="topNumbersChart"></canvas>
@@ -286,20 +287,18 @@
 
             <!-- Chart 2 -->
             <div class="glass-panel p-6 rounded-2xl">
-                <div class="flex items-center justify-between mb-6">
+                <div class="flex items-center justify-between mb-4">
                     <div>
                         <h3 class="text-xl font-bold text-white">Equilíbrio Par/Ímpar</h3>
                         <p class="text-sm text-emerald-200/50">Composição ideal de apostas</p>
                     </div>
-                    <div class="bg-emerald-500/20 p-2 rounded-lg">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-emerald-400" fill="none"
-                            viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M11 3.055A9.001 9.001 0 1020.945 13H11V3.055z" />
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M20.488 9H15V3.512A9.025 9.025 0 0120.488 9z" />
-                        </svg>
-                    </div>
+                </div>
+                <div class="mb-4 bg-emerald-900/40 p-3 rounded-lg border border-emerald-500/20">
+                    <p class="text-sm text-emerald-100 leading-relaxed">
+                        <strong class="text-emerald-400">Por que isso importa?</strong> <br>
+                        É raríssimo sair apenas números Pares ou apenas Ímpares. O "normal" da Mega-Sena é sair meio a
+                        meio (3 pares e 3 ímpares). Evite jogos desequilibrados!
+                    </p>
                 </div>
                 <div class="chart-container">
                     <canvas id="oddEvenChart"></canvas>
@@ -309,11 +308,15 @@
 
         <!-- Heatmap -->
         <div class="glass-panel p-6 md:p-8 rounded-2xl mb-16">
-            <h3 class="text-xl font-bold text-white mb-6 flex items-center gap-3">
+            <h3 class="text-xl font-bold text-white mb-2 flex items-center gap-3">
                 <span>Mapa de Calor 1-60</span>
-                <span class="text-xs font-normal px-2 py-1 rounded bg-white/10 text-emerald-200">Vermelho = Mais
-                    Sorteados</span>
             </h3>
+            <p class="text-emerald-200/70 mb-6 max-w-3xl">
+                Este mapa mostra "a temperatura" de cada número. <strong class="text-red-400">Vermelho</strong> são os
+                números que saem toda hora (quentes). <strong class="text-blue-400">Azul</strong> são os que quase nunca
+                saem (frios). Use isso para equilibrar seu jogo: escolha alguns quentes e talvez um frio que você acha
+                que vai "acordar".
+            </p>
             <div id="heatmapGrid" class="heatmap-grid">
                 <!-- Javascript will populate -->
             </div>
@@ -327,8 +330,8 @@
 
             <div class="glass-panel p-8 md:p-12 rounded-3xl border-emerald-500/30">
                 <div class="text-center mb-10">
-                    <h2 class="text-3xl md:text-4xl font-bold text-white mb-4">🔮 Palpites da Inteligência</h2>
-                    <p class="text-emerald-200/70">Sugestões geradas por nossos algoritmos para 2025</p>
+                    <h2 class="text-3xl md:text-4xl font-bold text-white mb-4">🔮 Palpites Prontos</h2>
+                    <p class="text-emerald-200/70">Já montamos 3 jogos estratégicos usando a matemática para você:</p>
                 </div>
 
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -337,7 +340,10 @@
                         class="bg-black/20 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/50 transition duration-300">
                         <div class="flex items-center gap-3 mb-4">
                             <span class="text-2xl">👑</span>
-                            <h4 class="font-bold text-lg text-emerald-100">A Histórica</h4>
+                            <div class="text-left">
+                                <h4 class="font-bold text-lg text-emerald-100">A Histórica</h4>
+                                <p class="text-xs text-emerald-400">Para quem confia no passado</p>
+                            </div>
                         </div>
                         <div class="flex flex-wrap gap-2 justify-center">
                             <span class="stat-badge badge-gold">10</span>
@@ -347,7 +353,10 @@
                             <span class="stat-badge badge-gold">33</span>
                             <span class="stat-badge badge-gold">23</span>
                         </div>
-                        <p class="mt-4 text-xs text-center text-emerald-200/40">Baseado em frequência absoluta.</p>
+                        <p class="mt-4 text-xs text-center text-emerald-200/50 border-t border-white/10 pt-3">
+                            Este jogo reúne as 6 dezenas que mais foram sorteadas em toda a história. É a aposta
+                            "favorita" da estatística.
+                        </p>
                     </div>
 
                     <!-- Palpite 2 -->
@@ -355,7 +364,10 @@
                         class="bg-black/20 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/50 transition duration-300">
                         <div class="flex items-center gap-3 mb-4">
                             <span class="text-2xl">⚖️</span>
-                            <h4 class="font-bold text-lg text-emerald-100">Equilibrada</h4>
+                            <div class="text-left">
+                                <h4 class="font-bold text-lg text-emerald-100">Equilíbrio Ideal</h4>
+                                <p class="text-xs text-emerald-400">A aposta mais racional</p>
+                            </div>
                         </div>
                         <div class="flex flex-wrap gap-2 justify-center">
                             <span class="stat-badge badge-neutral">04</span>
@@ -365,8 +377,10 @@
                             <span class="stat-badge badge-neutral">44</span>
                             <span class="stat-badge badge-neutral">59</span>
                         </div>
-                        <p class="mt-4 text-xs text-center text-emerald-200/40">3 Pares, 3 Ímpares, Distribuição
-                            Espacial.</p>
+                        <p class="mt-4 text-xs text-center text-emerald-200/50 border-t border-white/10 pt-3">
+                            Segue a regra de ouro: 3 números pares e 3 ímpares, bem espalhados pelo volante. É o tipo de
+                            jogo que mais costuma sair.
+                        </p>
                     </div>
 
                     <!-- Palpite 3 -->
@@ -374,7 +388,10 @@
                         class="bg-black/20 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/50 transition duration-300">
                         <div class="flex items-center gap-3 mb-4">
                             <span class="text-2xl">⚠️</span>
-                            <h4 class="font-bold text-lg text-emerald-100">Zebras (Atrasadas)</h4>
+                            <div class="text-left">
+                                <h4 class="font-bold text-lg text-emerald-100">As "Atrasadas"</h4>
+                                <p class="text-xs text-red-400">Tentando a sorte grande</p>
+                            </div>
                         </div>
                         <div class="flex flex-wrap gap-2 justify-center">
                             <span class="stat-badge badge-red">42</span>
@@ -384,8 +401,10 @@
                             <span class="stat-badge badge-red">13</span>
                             <span class="stat-badge badge-red">58</span>
                         </div>
-                        <p class="mt-4 text-xs text-center text-emerald-200/40">Dezenas "dorminhocas" com alta
-                            probabilidade de retorno.</p>
+                        <p class="mt-4 text-xs text-center text-emerald-200/50 border-t border-white/10 pt-3">
+                            São números que não saem há muito tempo. A teoria é que eles "estão para estourar" a
+                            qualquer momento.
+                        </p>
                     </div>
                 </div>
             </div>
