--- a/index.html
+++ b/index.html
@@ -320,75 +320,48 @@
         </div>
 
         <!-- Hot Bets Section -->
-        <div class="relative">
-            <div
-                class="absolute inset-0 bg-gradient-to-r from-amber-500/20 to-purple-500/20 blur-3xl rounded-3xl -z-10">
+        <p class="mt-4 text-xs text-center text-emerald-200/40">Baseado em frequência absoluta.</p>
+        </div>
+
+        <!-- Palpite 2 -->
+        <div
+            class="bg-black/20 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/50 transition duration-300">
+            <div class="flex items-center gap-3 mb-4">
+                <span class="text-2xl">⚖️</span>
+                <h4 class="font-bold text-lg text-emerald-100">Equilibrada</h4>
             </div>
-
-            <div class="glass-panel p-8 md:p-12 rounded-3xl border-emerald-500/30">
-                <div class="text-center mb-10">
-                    <h2 class="text-3xl md:text-4xl font-bold text-white mb-4">🔮 Palpites da Inteligência</h2>
-                    <p class="text-emerald-200/70">Sugestões geradas por nossos algoritmos para 2025</p>
-                </div>
-
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <!-- Palpite 1 -->
-                    <div
-                        class="bg-black/20 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/50 transition duration-300">
-                        <div class="flex items-center gap-3 mb-4">
-                            <span class="text-2xl">👑</span>
-                            <h4 class="font-bold text-lg text-emerald-100">A Histórica</h4>
-                        </div>
-                        <div class="flex flex-wrap gap-2 justify-center">
-                            <span class="stat-badge badge-gold">10</span>
-                            <span class="stat-badge badge-gold">53</span>
-                            <span class="stat-badge badge-gold">05</span>
-                            <span class="stat-badge badge-gold">37</span>
-                            <span class="stat-badge badge-gold">33</span>
-                            <span class="stat-badge badge-gold">23</span>
-                        </div>
-                        <p class="mt-4 text-xs text-center text-emerald-200/40">Baseado em frequência absoluta.</p>
-                    </div>
-
-                    <!-- Palpite 2 -->
-                    <div
-                        class="bg-black/20 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/50 transition duration-300">
-                        <div class="flex items-center gap-3 mb-4">
-                            <span class="text-2xl">⚖️</span>
-                            <h4 class="font-bold text-lg text-emerald-100">Equilibrada</h4>
-                        </div>
-                        <div class="flex flex-wrap gap-2 justify-center">
-                            <span class="stat-badge badge-neutral">04</span>
-                            <span class="stat-badge badge-neutral">11</span>
-                            <span class="stat-badge badge-neutral">27</span>
-                            <span class="stat-badge badge-neutral">32</span>
-                            <span class="stat-badge badge-neutral">44</span>
-                            <span class="stat-badge badge-neutral">59</span>
-                        </div>
-                        <p class="mt-4 text-xs text-center text-emerald-200/40">3 Pares, 3 Ímpares, Distribuição
-                            Espacial.</p>
-                    </div>
-
-                    <!-- Palpite 3 -->
-                    <div
-                        class="bg-black/20 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/50 transition duration-300">
-                        <div class="flex items-center gap-3 mb-4">
-                            <span class="text-2xl">⚠️</span>
-                            <h4 class="font-bold text-lg text-emerald-100">Zebras (Atrasadas)</h4>
-                        </div>
-                        <div class="flex flex-wrap gap-2 justify-center">
-                            <span class="stat-badge badge-red">42</span>
-                            <span class="stat-badge badge-red">07</span>
-                            <span class="stat-badge badge-red">21</span>
-                            <span class="stat-badge badge-red">50</span>
-                            <span class="stat-badge badge-red">13</span>
-                            <span class="stat-badge badge-red">58</span>
-                        </div>
-                        <p class="mt-4 text-xs text-center text-emerald-200/40">Dezenas "dorminhocas" com alta
-                            probabilidade de retorno.</p>
-                    </div>
-                </div>
+            <div class="flex flex-wrap gap-2 justify-center">
+                <span class="stat-badge badge-neutral">04</span>
+                <span class="stat-badge badge-neutral">11</span>
+                <span class="stat-badge badge-neutral">27</span>
+                <span class="stat-badge badge-neutral">32</span>
+                <span class="stat-badge badge-neutral">44</span>
+                <span class="stat-badge badge-neutral">59</span>
             </div>
+            <p class="mt-4 text-xs text-center text-emerald-200/40">3 Pares, 3 Ímpares, Distribuição
+                Espacial.</p>
+        </div>
+
+        <!-- Palpite 3 -->
+        <div
+            class="bg-black/20 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/50 transition duration-300">
+            <div class="flex items-center gap-3 mb-4">
+                <span class="text-2xl">⚠️</span>
+                <h4 class="font-bold text-lg text-emerald-100">Zebras (Atrasadas)</h4>
+            </div>
+            <div class="flex flex-wrap gap-2 justify-center">
+                <span class="stat-badge badge-red">42</span>
+                <span class="stat-badge badge-red">07</span>
+                <span class="stat-badge badge-red">21</span>
+                <span class="stat-badge badge-red">50</span>
+                <span class="stat-badge badge-red">13</span>
+                <span class="stat-badge badge-red">58</span>
+            </div>
+            <p class="mt-4 text-xs text-center text-emerald-200/40">Dezenas "dorminhocas" com alta
+                probabilidade de retorno.</p>
+        </div>
+        </div>
+        </div>
         </div>
 
         <footer class="mt-16 text-center text-emerald-200/30 text-sm">
@@ -506,16 +479,26 @@
             const intensity = (item.count - minFreq) / (maxFreq - minFreq);
 
             // Color interpolation logic (Blue -> Yellow -> Red)
+            div.style.color = '#fff';
+
             if (intensity > 0.75) {
+                // QUENTE (TOP)
                 div.style.background = 'linear-gradient(135deg, #ef4444, #b91c1c)';
-                div.style.boxShadow = '0 0 10px rgba(239,68,68,0.4)';
+                div.style.boxShadow = '0 0 10px rgba(239,68,68,0.5)';
+                div.style.fontWeight = '800';
             } else if (intensity > 0.5) {
+                // MORNO/QUASE QUENTE
                 div.style.background = 'linear-gradient(135deg, #f59e0b, #d97706)';
             } else if (intensity > 0.25) {
-                div.style.background = 'rgba(255,255,255,0.1)';
+                // NEUTRO (AMARELO SUAVE/VERDE) - Garantindo visibilidade
+                div.style.background = 'rgba(234, 179, 8, 0.25)'; // Amber/Yellowish tint
+                div.style.border = '1px solid rgba(234, 179, 8, 0.3)';
+                div.style.color = '#fde68a';
             } else {
-                div.style.background = 'rgba(59,130,246,0.2)';
-                div.style.color = '#93c5fd';
+                // FRIO (AZUL CLARO) - Garantindo visibilidade
+                div.style.background = 'rgba(59, 130, 246, 0.3)'; // Blue tint
+                div.style.border = '1px solid rgba(59, 130, 246, 0.3)';
+                div.style.color = '#bfdbfe';
             }
 
             div.title = `Dezena ${item.number}: ${item.count} vezes`;
