--- a/index.html
+++ b/index.html
@@ -320,48 +320,96 @@
         </div>
 
         <!-- Hot Bets Section -->
-        <p class="mt-4 text-xs text-center text-emerald-200/40">Baseado em frequência absoluta.</p>
-        </div>
+        <div class="relative">
+            <div
+                class="absolute inset-0 bg-gradient-to-r from-amber-500/20 to-purple-500/20 blur-3xl rounded-3xl -z-10">
+            </div>
 
-        <!-- Palpite 2 -->
-        <div
-            class="bg-black/20 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/50 transition duration-300">
-            <div class="flex items-center gap-3 mb-4">
-                <span class="text-2xl">⚖️</span>
-                <h4 class="font-bold text-lg text-emerald-100">Equilibrada</h4>
-            </div>
-            <div class="flex flex-wrap gap-2 justify-center">
-                <span class="stat-badge badge-neutral">04</span>
-                <span class="stat-badge badge-neutral">11</span>
-                <span class="stat-badge badge-neutral">27</span>
-                <span class="stat-badge badge-neutral">32</span>
-                <span class="stat-badge badge-neutral">44</span>
-                <span class="stat-badge badge-neutral">59</span>
-            </div>
-            <p class="mt-4 text-xs text-center text-emerald-200/40">3 Pares, 3 Ímpares, Distribuição
-                Espacial.</p>
-        </div>
+            <div class="glass-panel p-8 md:p-12 rounded-3xl border-emerald-500/30">
+                <div class="text-center mb-10">
+                    <h2 class="text-3xl md:text-4xl font-bold text-white mb-4">🔮 Palpites da Inteligência</h2>
+                    <p class="text-emerald-200/70">Sugestões estratégicas baseadas em 30 anos de dados:</p>
+                </div>
 
-        <!-- Palpite 3 -->
-        <div
-            class="bg-black/20 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/50 transition duration-300">
-            <div class="flex items-center gap-3 mb-4">
-                <span class="text-2xl">⚠️</span>
-                <h4 class="font-bold text-lg text-emerald-100">Zebras (Atrasadas)</h4>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                    <!-- Palpite 1 -->
+                    <div
+                        class="bg-black/20 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/50 transition duration-300">
+                        <div class="flex items-center gap-3 mb-4">
+                            <span class="text-2xl">👑</span>
+                            <div class="text-left">
+                                <h4 class="font-bold text-lg text-emerald-100">A Histórica</h4>
+                                <p class="text-xs text-amber-400 font-bold uppercase">Tendência Máxima</p>
+                            </div>
+                        </div>
+                        <div class="flex flex-wrap gap-2 justify-center">
+                            <span class="stat-badge badge-gold">10</span>
+                            <span class="stat-badge badge-gold">53</span>
+                            <span class="stat-badge badge-gold">05</span>
+                            <span class="stat-badge badge-gold">37</span>
+                            <span class="stat-badge badge-gold">33</span>
+                            <span class="stat-badge badge-gold">23</span>
+                        </div>
+                        <p
+                            class="mt-4 text-xs text-center text-emerald-100/60 border-t border-white/10 pt-3 leading-relaxed">
+                            <strong class="text-emerald-400">Por que apostar?</strong><br>
+                            Estas são as 6 dezenas que mais saíram na história. Matematicamente, são os "favoritos" do
+                            sorteio.
+                        </p>
+                    </div>
+
+                    <!-- Palpite 2 -->
+                    <div
+                        class="bg-black/20 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/50 transition duration-300">
+                        <div class="flex items-center gap-3 mb-4">
+                            <span class="text-2xl">⚖️</span>
+                            <div class="text-left">
+                                <h4 class="font-bold text-lg text-emerald-100">Equilíbrio Ideal</h4>
+                                <p class="text-xs text-blue-400 font-bold uppercase">Aposta Racional</p>
+                            </div>
+                        </div>
+                        <div class="flex flex-wrap gap-2 justify-center">
+                            <span class="stat-badge badge-neutral">04</span>
+                            <span class="stat-badge badge-neutral">11</span>
+                            <span class="stat-badge badge-neutral">27</span>
+                            <span class="stat-badge badge-neutral">32</span>
+                            <span class="stat-badge badge-neutral">44</span>
+                            <span class="stat-badge badge-neutral">59</span>
+                        </div>
+                        <p
+                            class="mt-4 text-xs text-center text-emerald-100/60 border-t border-white/10 pt-3 leading-relaxed">
+                            <strong class="text-emerald-400">Por que apostar?</strong><br>
+                            Usa a regra de ouro dos ganhadores: 3 pares, 3 ímpares e distribuição perfeita pelo volante.
+                        </p>
+                    </div>
+
+                    <!-- Palpite 3 -->
+                    <div
+                        class="bg-black/20 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/50 transition duration-300">
+                        <div class="flex items-center gap-3 mb-4">
+                            <span class="text-2xl">⚠️</span>
+                            <div class="text-left">
+                                <h4 class="font-bold text-lg text-emerald-100">Zebras (Atrasadas)</h4>
+                                <p class="text-xs text-red-400 font-bold uppercase">Alto Risco/Retorno</p>
+                            </div>
+                        </div>
+                        <div class="flex flex-wrap gap-2 justify-center">
+                            <span class="stat-badge badge-red">42</span>
+                            <span class="stat-badge badge-red">07</span>
+                            <span class="stat-badge badge-red">21</span>
+                            <span class="stat-badge badge-red">50</span>
+                            <span class="stat-badge badge-red">13</span>
+                            <span class="stat-badge badge-red">58</span>
+                        </div>
+                        <p
+                            class="mt-4 text-xs text-center text-emerald-100/60 border-t border-white/10 pt-3 leading-relaxed">
+                            <strong class="text-emerald-400">Por que apostar?</strong><br>
+                            São os números mais "atrasados". Pela Lei dos Grandes Números, a probabilidade deles saírem
+                            aumenta a cada sorteio.
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="flex flex-wrap gap-2 justify-center">
-                <span class="stat-badge badge-red">42</span>
-                <span class="stat-badge badge-red">07</span>
-                <span class="stat-badge badge-red">21</span>
-                <span class="stat-badge badge-red">50</span>
-                <span class="stat-badge badge-red">13</span>
-                <span class="stat-badge badge-red">58</span>
-            </div>
-            <p class="mt-4 text-xs text-center text-emerald-200/40">Dezenas "dorminhocas" com alta
-                probabilidade de retorno.</p>
-        </div>
-        </div>
-        </div>
         </div>
 
         <footer class="mt-16 text-center text-emerald-200/30 text-sm">
