chore: adiciona meta tags e imagem de preview para compartilhamento

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
 
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="Mega da Virada 2025 | Análise Estratégica R$ 1 Bi 📉💰" />
+    <meta property="og:description"
+        content="Descubra as dezenas secretas, padrões ocultos e os 3 palpites matemáticos para o prêmio de R$ 1 Bilhão. Acesse a análise premium gratuita." />
+    <!-- Image URL assumes GitHub Pages structure. Confirm if domain is different -->
+    <meta property="og:image" content="https://gbsxl.github.io/MegaDaViradaAnalysis/preview.png" />
+    <meta property="og:url" content="https://gbsxl.github.io/MegaDaViradaAnalysis/" />
+    <meta property="og:type" content="website" />
+
     <script>
         tailwind.config = {
             theme: {
