--- a/index.html
+++ b/index.html
@@ -18,13 +18,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
 
     <!-- Open Graph / Social Media Meta Tags -->
-    <meta property="og:title" content="Mega da Virada 2025 | Análise Estratégica R$ 1 Bi 📉💰" />
+    <meta property="og:title" content="Mega da Virada 2025 | Analise Estrategica R$ 1 Bilhao" />
     <meta property="og:description"
-        content="Descubra as dezenas secretas, padrões ocultos e os 3 palpites matemáticos para o prêmio de R$ 1 Bilhão. Acesse a análise premium gratuita." />
-    <!-- Image URL assumes GitHub Pages structure. Confirm if domain is different -->
+        content="Descubra as dezenas secretas, padroes ocultos e os 3 palpites matematicos para o premio de R$ 1 Bilhao. Acesse a analise premium gratuita." />
     <meta property="og:image" content="https://gbsxl.github.io/MegaDaViradaAnalysis/preview.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://gbsxl.github.io/MegaDaViradaAnalysis/" />
     <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Mega da Virada 2025 | Analise Estrategica R$ 1 Bilhao" />
+    <meta name="twitter:description"
+        content="Descubra as dezenas secretas e os 3 palpites matematicos para o premio de R$ 1 Bilhao." />
+    <meta name="twitter:image" content="https://gbsxl.github.io/MegaDaViradaAnalysis/preview.png" />
 
     <script>
         tailwind.config = {
@@ -442,8 +450,60 @@
             </div>
         </div>
 
-        <footer class="mt-16 text-center text-emerald-200/30 text-sm">
-            <p>&copy; 2025 Mega Analysis. Jogue com responsabilidade. Proibido para menores de 18 anos.</p>
+        <!-- Share Section -->
+        <div class="mt-16 text-center">
+            <a href="https://wa.me/?text=Olha%20so%20isso!%20Achei%20uma%20analise%20COMPLETA%20da%20Mega%20da%20Virada%202025%20com%20os%20numeros%20mais%20quentes,%20mapas%20de%20calor%20e%20palpites%20baseados%20em%20dados%20reais%20de%2030%20anos!%20Confere:%20https://gbsxl.github.io/MegaDaViradaAnalysis/"
+                target="_blank" rel="noopener noreferrer"
+                class="inline-flex items-center gap-3 bg-gradient-to-r from-green-500 to-green-600 hover:from-green-400 hover:to-green-500 text-white px-8 py-4 rounded-full font-bold text-lg transition-all duration-300 shadow-[0_0_30px_rgba(34,197,94,0.4)] hover:shadow-[0_0_40px_rgba(34,197,94,0.6)] transform hover:-translate-y-1 border border-green-400/30">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+                    <path
+                        d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z" />
+                </svg>
+                Compartilhar no WhatsApp
+            </a>
+            <p class="mt-4 text-emerald-200/50 text-sm">Mande para seus amigos e aumentem as chances juntos!</p>
+        </div>
+
+        <!-- Freelance CTA Section -->
+        <div class="mt-20 glass-panel p-8 md:p-12 rounded-3xl border border-amber-500/30 relative overflow-hidden">
+            <div class="absolute top-0 right-0 -mr-20 -mt-20 w-80 h-80 bg-amber-500/10 rounded-full blur-3xl"></div>
+
+            <div class="relative z-10 text-center">
+                <div
+                    class="inline-block px-4 py-1.5 rounded-full bg-amber-500/20 border border-amber-500/30 text-amber-300 text-sm font-medium mb-6">
+                    Oportunidade
+                </div>
+
+                <h2 class="text-2xl md:text-3xl font-bold text-white mb-4">Quer uma página como essa?</h2>
+                <p class="text-emerald-200/70 max-w-2xl mx-auto mb-8 leading-relaxed">
+                    Páginas de análise de dados, landing pages, dashboards interativos ou sistemas web personalizados.
+                    Transformo sua ideia em realidade com design premium e código de qualidade.
+                </p>
+
+                <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
+                    <a href="https://wa.me/5561991399094?text=Olá%20Gabriel!%20Vi%20o%20projeto%20da%20Mega%20da%20Virada%20e%20gostaria%20de%20conversar%20sobre%20um%20projeto."
+                        target="_blank" rel="noopener noreferrer"
+                        class="inline-flex items-center gap-2 bg-gradient-to-r from-amber-500 to-amber-600 hover:from-amber-400 hover:to-amber-500 text-emerald-900 px-6 py-3 rounded-full font-bold transition-all duration-300 shadow-lg hover:shadow-xl transform hover:-translate-y-0.5">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z" />
+                        </svg>
+                        Falar com Gabriel
+                    </a>
+                    <span class="text-emerald-200/50 text-sm">(61) 99139-9094</span>
+                </div>
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <footer class="mt-16 text-center">
+            <div class="mb-4">
+                <p class="text-emerald-300 font-medium">Desenvolvido por <span class="text-amber-400 font-bold">Gabriel
+                        Sousa</span></p>
+                <p class="text-emerald-200/40 text-xs mt-1">Desenvolvedor Full-Stack | Brasília, DF</p>
+            </div>
+            <p class="text-emerald-200/30 text-sm">&copy; 2025 Mega Analysis. Jogue com responsabilidade. Proibido para
+                menores de 18 anos.</p>
         </footer>
 
     </main>
