fix: melhora meta tags OG para preview de imagem no WhatsApp

--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
 
     <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:site_name" content="Mega da Virada 2025" />
     <meta property="og:title" content="Mega da Virada 2025 | Analise Estrategica R$ 1 Bilhao" />
     <meta property="og:description"
         content="Descubra as dezenas secretas, padroes ocultos e os 3 palpites matematicos para o premio de R$ 1 Bilhao. Acesse a analise premium gratuita." />
     <meta property="og:image" content="https://gbsxl.github.io/MegaDaViradaAnalysis/preview.png" />
+    <meta property="og:image:secure_url" content="https://gbsxl.github.io/MegaDaViradaAnalysis/preview.png" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Mega da Virada 2025 - Analise Premium" />
     <meta property="og:url" content="https://gbsxl.github.io/MegaDaViradaAnalysis/" />
     <meta property="og:type" content="website" />
 
