--- a/index.html
+++ b/index.html
@@ -611,8 +611,9 @@
             </div>
         </div>
 
+        <!-- Share Section -->
         <div class="mt-16 text-center">
-            <a href="https://wa.me/?text=Achei%20uma%20an%C3%A1lise%20da%20Mega%20da%20Virada%20baseada%20em%20dados%20dos%20%C3%BAltimos%2030%20anos.%0A%0ATem%20estat%C3%ADsticas%2C%20mapas%20de%20calor%20dos%20n%C3%BAmeros%20que%20saem%20mais%20e%20d%C3%A1%20at%C3%A9%20pra%20montar%20seu%20jogo%20direto%20no%20site!%0A%0Ahttps%3A%2F%2Fgbsxl.github.io%2FMegaDaViradaAnalysis%2F"
+            <a href="https://wa.me/?text=Achei%20uma%20an%C3%A1lise%20da%20Mega%20da%20Virada%20baseada%20em%20dados%20dos%20%C3%BAltimos%2030%20anos.%0A%0ATem%20estat%C3%ADsticas%2C%20mapas%20de%20calor%2C%20d%C3%A1%20pra%20montar%20seu%20jogo%20e%20depois%20do%20sorteio%20d%C3%A1%20pra%20conferir%20as%20apostas%20direto%20no%20site!%0A%0Ahttps%3A%2F%2Fgbsxl.github.io%2FMegaDaViradaAnalysis%2F"
                 target="_blank" rel="noopener noreferrer"
                 class="inline-flex items-center gap-3 bg-gradient-to-r from-green-500 to-green-600 hover:from-green-400 hover:to-green-500 text-white px-8 py-4 rounded-full font-bold text-lg transition-all duration-300 shadow-[0_0_30px_rgba(34,197,94,0.4)] hover:shadow-[0_0_40px_rgba(34,197,94,0.6)] transform hover:-translate-y-1 border border-green-400/30">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
